RESOLVED FIXED155382
Regression(r198040): WebKit2.DocumentStartUserScriptAlertCrashTest API test is crashing in debug
https://bugs.webkit.org/show_bug.cgi?id=155382
Summary Regression(r198040): WebKit2.DocumentStartUserScriptAlertCrashTest API test i...
Chris Dumez
Reported 2016-03-11 14:47:16 PST
Regression: WebKit2.DocumentStartUserScriptAlertCrashTest API test is crashing in debug: ASSERTION FAILED: applicationBundleIsEqualTo() should not be called before setApplicationBundleIdentifier() !applicationBundleIdentifierOverrideWasQueried /Volumes/Data/slave/yosemite-debug/build/Source/WebCore/platform/RuntimeApplicationChecks.mm(62) : void WebCore::setApplicationBundleIdentifier(const WTF::String &) 1 0x107f420e0 WTFCrash 2 0x10c105201 WebCore::setApplicationBundleIdentifier(WTF::String const&) 3 0x1045648e5 WebKit::WebProcess::initializeWebProcess(WebKit::WebProcessCreationParameters&&) 4 0x1045aeb5f void IPC::callMemberFunctionImpl<WebKit::WebProcess, void (WebKit::WebProcess::*)(WebKit::WebProcessCreationParameters&&), std::__1::tuple<WebKit::WebProcessCreationParameters>, 0ul>(WebKit::WebProcess*, void (WebKit::WebProcess::*)(WebKit::WebProcessCreationParameters&&), std::__1::tuple<WebKit::WebProcessCreationParameters>&&, std::index_sequence<0ul>) 5 0x1045ae9f8 void IPC::callMemberFunction<WebKit::WebProcess, void (WebKit::WebProcess::*)(WebKit::WebProcessCreationParameters&&), std::__1::tuple<WebKit::WebProcessCreationParameters>, std::make_index_sequence<1ul> >(std::__1::tuple<WebKit::WebProcessCreationParameters>&&, WebKit::WebProcess*, void (WebKit::WebProcess::*)(WebKit::WebProcessCreationParameters&&)) 6 0x1045a79c8 void IPC::handleMessage<Messages::WebProcess::InitializeWebProcess, WebKit::WebProcess, void (WebKit::WebProcess::*)(WebKit::WebProcessCreationParameters&&)>(IPC::MessageDecoder&, WebKit::WebProcess*, void (WebKit::WebProcess::*)(WebKit::WebProcessCreationParameters&&)) 7 0x1045a5e15 WebKit::WebProcess::didReceiveWebProcessMessage(IPC::Connection&, IPC::MessageDecoder&) 8 0x104565d8b WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::MessageDecoder&) 9 0x103dd33b3 IPC::Connection::dispatchMessage(IPC::MessageDecoder&) 10 0x103dca4fe IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::MessageDecoder, std::__1::default_delete<IPC::MessageDecoder> >) 11 0x103dd39af IPC::Connection::dispatchOneMessage() 12 0x103dd522d IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::MessageDecoder, std::__1::default_delete<IPC::MessageDecoder> >)::$_10::operator()() const 13 0x103dd51fc std::__1::__function::__func<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::MessageDecoder, std::__1::default_delete<IPC::MessageDecoder> >)::$_10, std::__1::allocator<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::MessageDecoder, std::__1::default_delete<IPC::MessageDecoder> >)::$_10>, void ()>::operator()() 14 0x10784daaa std::__1::function<void ()>::operator()() const 15 0x107f8ea22 WTF::RunLoop::performWork() 16 0x107f8f2a4 WTF::RunLoop::performWork(void*) 17 0x7fff8e7bca01 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 18 0x7fff8e7aeb8d __CFRunLoopDoSources0 19 0x7fff8e7ae1bf __CFRunLoopRun 20 0x7fff8e7adbd8 CFRunLoopRunSpecific 21 0x7fff8864f56f RunCurrentEventLoopInMode 22 0x7fff8864f2ea ReceiveNextEventCommon 23 0x7fff8864f12b _BlockUntilNextEventMatchingListInModeWithFilter 24 0x7fff89be98ab _DPSNextEvent 25 0x7fff89be8e58 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] 26 0x7fff89bdeaf3 -[NSApplication run] 27 0x7fff89b5b244 NSApplicationMain 28 0x7fff92e9f928 _xpc_objc_main 29 0x7fff92ea1030 _parse_sysctl_once 30 0x103d0d0f0 main 31 0x7fff91aec5c9 start
Attachments
Patch (5.20 KB, patch)
2016-03-11 15:13 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-03-11 15:02:08 PST
Good thing we added this assertion, it looks like it found a bug. I will fix shortly.
Chris Dumez
Comment 2 2016-03-11 15:13:46 PST
Chris Dumez
Comment 3 2016-03-11 15:23:47 PST
Comment on attachment 273778 [details] Patch Clearing flags on attachment: 273778 Committed r198051: <http://trac.webkit.org/changeset/198051>
Chris Dumez
Comment 4 2016-03-11 15:23:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.